--- a/server/package.json
+++ b/server/package.json
@@ -8,18 +8,25 @@
     "node": "18.x"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "mocha",
     "start": "nodemon index.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "chai": "^5.1.1",
+    "chai-http": "^5.0.0",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "mocha": "^10.7.0",
     "mongoose": "^8.5.1",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^4.3.0"
+  },
+  "devDependencies": {
+    "expect": "^29.7.0",
+    "supertest": "^7.0.0"
   }
 }
